[tool.poetry]
name = "pysgf"
version = "0.8.1"
description = "Simple SGF parser"
authors = ["Sander Land"]

[tool.black]
line-length=120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # sort all Python files
known_third_party = []

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3"
pytest = "^5.2"
sphinx = "^2.4.4"
sphinx-rtd-theme = "^0.4.3"
twine = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
