[tool.poetry]
name = "pysgf"
version = "0.9.0"
description = "Simple SGF parser"
authors = ["Sander Land"]

[tool.black]
line-length=120
target_version = ['py39']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # sort all Python files
known_third_party = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.1"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
twine = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
